--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div style="height: 5000px; overflow-y: scroll; background-image: url(img/flag.jpg); background-repeat: no-repeat; background-size: 1700px 850px;">
+  <div style="background-image: url(img/flag.jpg); background-repeat: no-repeat; background-size: 1700px 850px;">
     <div class="UPPERBAR">
       <div class="UB2">
         <a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/">
@@ -128,7 +128,14 @@
       <p><strong>GOD IS DEVIL</strong></p>
       <p><strong>SATAN IS ANGEL</strong></p>
     </div>
-  </div>
+    <div>
+      
+    </div>
+      <div><img src="img/symbol.png"></div>
+      <h1>LOLIKON ACTION</h1>
+      <p><strong>LOLIKON IS RIGHT</strong></p>
+      <div><img src="img/PRO1.jpg" style="width: 600px;" height="450px;"></div>
+    </div>
 
   <script>
       document.querySelectorAll('.SCROLLPOSTER').forEach(container => {
