--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
     <head>
         <title>AND - NEWS</title>
         <link rel="icon" href="/img/logo.png">
-        <link href="styles/style.css" rel="stylesheet" type="text/css" />
+        <link href="styles/style.css" rel="stylesheet" type="text/css"/>
         <style>
             body { font-family: "Pretendard", sans-serif; margin: 40px; background: #f8f8f8; }
             h1 { text-align: center; }
@@ -16,7 +16,7 @@
         </style>
     </head>
     <body>
-        <div style="height: 5000px; overflow-y: scroll;">
+        <div class="UPPERBAR">
             <div class="UB2">
                 <a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/">
                 <img src="img/logo.png" title="home" style="width:150px; height:150px;">
@@ -31,8 +31,19 @@
             </ul>
             </div>
         </div>
-
-
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="warp" style="text-align: center;">
+            <details>
+                <summary><h1>지금 당장 클릭</h1>미국 이민단속국, 트럼프 행정부 때문인가?</summary>
+                <p>공화당과 민주당을 지옥으로, 미국은 ATOMWAFFEN DIVISION과 IRON FORNT가 지배해 마땅하다.</p>
+            </details>
+        </div>
 
         <div class="wrap">
             <h1>댓글</h1>
@@ -45,7 +56,7 @@
             <div id="posts"></div>
         </div>
 
-          <script type="module">
+    <script type="module">
             import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
         import { getFirestore, collection, addDoc, getDocs, query, orderBy, deleteDoc, doc, getDoc 
         } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
