--- a/philosophy.html
+++ b/philosophy.html
@@ -20,6 +20,56 @@
                     <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/hero" title="hero">HERO</a></li>
                 </ui>
             </div>
+            <h1>각개전투(INDIVIDUAL COMBAT)</h1>
+            <p>세계의 대안을 위해.</p>
+            우리는 항상 부족해 왔다.
+인류사에는 수많은 때가 있었다. 부족에서 국가로 국가에서 시민의식의 세계로 그곳에서 봉건사회의 멸망을 경험하였고 다양한 정형화된 이념과 대의의 속에서 우리는 해매고 있다. 우리가 걸어야 하는 길과 우리가 밝혀야 하는 길은 암흑조차 존재하지 않는 어둠이다. 우리는 인류가 불가역적 상태에 있는 것은 아닌가 점검해보아야만 한다.
+
+구 소련 국민들이나 미국 시민들이나 아무에게나 물어보아라 지금 상태가 좋은가. 어떤 세계에 살았던 사람이든 아니오라고 답할 것이다. 우리는 우리가 불편한 세계에 사는 것이고 우리는 우리가 만족하지 못하는 세계에 사는 것이다. 그렇다면 그 세계는 세계로서의 역할을 다하지 못한 것이다. 그런 세계에서 인류가 느끼는 일련의 고통은 지속되고 반복될 것이다. 우리는 그것을 끊어내고 후대에게 지속가능한 미래와 최선의 대안을 제공해야만 한다.
+기후 위기와 환경 파괴는 우리가 지나온 나날들을 무참히 불태웠고 전쟁과 자본주의의 비통함 공산주의와 각종 대안의 실패들은 우리에게 덧없는 유산을 남겨줬을 뿐이었다. 누군가는 이렇게 말할 것이다. 기업을 규제하고 평화를 건설하기 위해 국제기구를 만들고 공산주의가 다시 일어서지 않도록 법제화하고 수정자본주의나 사회민주주의를 도입함으로써 빈부격차를 줄이고 그런 것들을 말하는 이에게 말한다.
+우리는 이미 그것을 했다. 이 말은 우리가 한 것들이 효과를 보지 못했음을 알려준다. 수정자본주의는 다시 불평등을 국제기구는 효과를 보지 못했고 반공은 비누거품처럼 사라졌다. 기업은 언제나 국가와 결탁했고 국가는 기업이 없으면 국민들을 먹여살릴 수 없는 완전한 약물 의존증 병자가 되어버렸다.
+여기서 나는 공산주의도 민주주의도 자본주의도 파시즘이나 국가사회주의도 조합주의도 국가자본주의도 그 어떠한 형태의 경제적 정치적 이데올로기를 지지하지 않음을 밝힌다. 우리가 이 상황을 타계해야할 방법은 그런 것들이 아니기 때문이다.
+우리가 진정으로 필요한 것은 재시작이다.
+우리가 진정 막다른 길에 들어섰고 되돌아갈 방법이 없다면, 그리고 내 손에는 권총이 뒤돌아갈 유일한 길에는 철갑을 두른 괴물이 자리한다면 그 총으로 무엇을 하겠는가. 고통 없이 내 머리에 쏠 것이다.
+우리는 끝까지 싸운다 다짐하고 이 막다른 길에서 온갖 발버둥을 치며 괴물을 위한 광대가 되어버린 것이다. 모든 이념의 상충 대의의 상충 인간의 이기주의와 혐오들 꼴보기 싫은 것들을 방치해야한다. 혐오성 발언을 허용하고 차별을 심화시켜야 한다. 자본주의의 빈부격차와 공산주의의 일당제 독재를 지속시켜야 한다.
+
+국민국가는 부족 상태의 공동체보다 실패한 개념이다. 겉으로는 파쇼와 빨갱이로부터 독립하고 승리한 민주주의를 내세우며 떠벌리고 선전하지만, 우리는 이것 또한 ‘선전’이라는 것을 명확히 알아야 한다. 근대적 국민국가가 등장함은 단순히 나타나지 않았다. 기존의 중세 유럽 봉건 사회에서의 국민, 주권, 영토는 국가의 3요소가 아닌 귀족과 정부의 재산일 뿐이었다. 이것은 명예혁명, 프랑스 혁명을 거치며 사람이라는 하나의 개체가 국민이라는 공동체적 대상으로 승격되고 그의 정신이 함양되기 시작했다. 이후 우리는 대표적으로 민주주의 사회, 공산주의 사회, 파시즘 사회의 시대를 겪고 이후 그 이념들은 전체주의인가 아닌가로 구분되기 시작했다. 우선 민주주의를 먼저 보자.
+민주주의는 겉으로는 자유와 다양성을 떠벌리며, 최고의 이념으로 평가받는다. 그러나 그 밑의 이면은 충분히 보지 않았는가? 우리는 형식만 남은 민주주의의 형태를 많이 봐왔다. 일본은 ‘민주주의’는 55년동안의 자유민주당(自由民主党)의 집권을 허용했고 이후 잠시 동안의 정권교체기가 있었으나 최종적으로는 자유민주당(自由民主党)의 ‘민주주의 독재’가 시작되었다.(당파, 총리를 고려하지 않았으나 전체적 이념의 틀은 같았다. ) 대한민국은 12.3 비상계엄을 겪으며 민주주의의 참상이 드러나기 시작했다. 제22대 국회에서의 더불어민주당(더불어民主黨)은 다수 의석을 통해 민주주의 사회에서 흔히 언급하는 ‘타협’을 배제하고 일방적인 표결을 감행하였다. 그와 동시에 국민의힘(國民의힘)의 대통령 윤석열은 민주주의의 필수적인 요소인 권력 분립(삼권분립)의 근간을 와해하려 군을 동원해 행정부가 입법부의 자립을 방해하려 했다. 이러한 민주주의의 문제점을 빠르게 간파한 정치 집단들은 이것들을 정치적 증오와 맹목적 애국심으로 이용하고 선전해 자신이 진짜 민주주의임을 선전한다. 하지만 이미 우리는 그 상황을 잘 알고 있다. 민주주의의 중대한 딜레마는 형식만 남은 제도뿐만이 아니다.
+정치적 집단의 불법화에 관한 딜레마는 수없이 논의되어왔다. 대부분의 사람들은 극단주의적 단체를 국가적으로 금지하고 폐쇄해야 한다고 주장한다. 이렇게 금지된 단체들은 때로 시대나 정부 수반의 성향에 따라 달라지기도 한다. 중요한 요지는 극단주의 단체 또한 인정되어야 하는가이다. 대부분의 국가의 헌법은 표현의 자유, 정치적 자유를 보장하고 이를 실현하도록 유도한다. 이 논리에 따르면 민주주의에 정면으로 대항하는 정당이나 단체 또한 활동의 자유를 보장받아야만 한다. 그러나 민주주의가 내세운 논리와는 달리 극단주의 단체는 대게 불법이기 마련이다. 대한민국은 국가보안법에 의해 공산주의 정당이 금지이고 발트3국, 우크라이나 등등 또한 공산주의 정당이 금지이며, 독일에서는 국가사회주의 독일 노동자당과 관련된 표식이 불법화되었고 국가사회주의 독일 노동자당의 정신을 계승하거나 이념이 비슷한 단체들은 불법으로 규정되기 마련이다. 그들이 일단 무슨 일을 했든 하지 않았든 민주주의를 지키기 위한 ‘민주적 자유 와해’가 대부분의 국가에서 일어남은 쉽게 알 수 있다. 대한민국은 12.3비상계엄 이후 정치적 극단화와 불화가 심화되었는데 대표적으로 보수주의 진영에서는 계엄에 대한 긍정적 반응이 여당(민주당)의 사설 검열 단체(민주파출소)로 인한 사법 제제를 받는 것이 자유민주주의 국가에서의 정당한 정치적 자유를 침해한다며 호소한다. 그 보수주의 정당이 극단주의적 성격을 지녔든, 테러를 감행했든 이 사실만 두고 블라인드 상태에서 분석한다면 이것은 민주주의의 논리에 정면으로 배반한다는 사실을 알 수 있다. 이번에는 유럽의 상황을 봐보자. 2013년도 창설된 독일의 우익대중주의, 독일 민족주의 정당 독일을 위한 대안(AfD)은 2024년 유럽 의회 선거와 2025년 독일 연방의회 선거를 거치며 강성한 지지율을 보여주었고 결국 기민련/기사련(CDU/CSU)를 제치고 원내 지지율 1위를 달성했다. 이 과정에서 AfD는 독일 연방헌법수호청(BfV)의 극단주의 세력 규정이라는 명을 쓰게 되었다. 이 두 국가의 공통적인 요소는 바로 헌법에 ‘자유민주적 기본질서’라는 ‘방어적 민주주의’ 요소가 들어갔다는 말이다. 그러나 우리는 이것이 다른 말로 빅브라더라 불림은 잘 알고 있다. 독일의 연방헌법수호청의 활동은 자국민의 안전과 자국의 안보를 수호함을 목표로 하지만 실상은 정부의 이익을 대변하는 전체주의적 요소에 불과하다.
+형식만 남은 민주주의와 멍청한 국민들 그리고 이익으로 점철된 민주주의의 대안은 없는가?
+그것의 대안으로 우리는 공산주의라는 인공적 이념과 파시즘이라는 행동적 이념을 만들어냈다. 공산주의의 시초는 산업화 시대의 노동자들의 마음을 쏙 빼놓고 훔친 마르크스라는 사람으로부터 생겨났다. 이후 다양한 국가들(대표적으로는 소비에트)이 탄생했고 그것의 멸망은 다시 한번 실패한 이념의 낙인 도장을 꼭 찍어 주었다.
+빅토리아 시대의 국가들에서 일어난 공산주의 혁명을 보면 항상 왕과 정부에 품은 불신과 기업과 자본가에 대한 증오로 들끓고 있다. 그러나 그들이 구축한 사회는 왕이 프롤레타리아 독재라는 이름으로, 기업과 자본가는 당이라는 이름으로 대체되고 말았고 현대까지 살아남은 공산주의 국가들은 그저 공산주의를 표방하는 독재 자본주의 국가들이다. 중화인민공화국은 덩샤오핑의 개혁개방(改革开放) 이후 시장경제 체제를 도입해 근본적인 공산주의에 배반하는 국가 경제관을 도입했고 다수의 공산주의 국가들이 그것을 따라했다. 이후 공산주의는 그저 ‘해방’을 ‘그들’의 관점으로 부르는 동의어가 되어버린지 오래다. 공산주의의 실패는 일방적 상식으로 보았을 때 보통선거, 권력 분립을 타파해야 한다는 주장에서부터 예견된 것이었다.
+파시즘 정부는 어떠한가. 공산주의에 반발한 반공주의와 민족주의를 이끌고 자국 중심의 민족관과 이념으로 새롭게 창시된 이데올로기다. 19세기에 들어서며 ‘독일 통일’과 ‘이탈리아 통일’을 통해 국민국가의 정신이 민족으로 확장됨을 알 수 있었다. 이후 1차세계대전이 끝나고 전간기에 일어난 운동중 대표적인 파시즘 운동인 베니토 무솔리니의 국가 파시스트당과 바이마르 공화국의 국가사회주의 독일 노동자당과 히틀러는 새로운 민족주의적 진로와 민족관 그리고 민족의 생활권과 이권을 주장하며 외부로의 팽창을 보였다. 그들은 왕당파와 공산주의자 민주주의자를 부정했으며, 유대 자본주의라는 개념으로 자본주의를 타도했다. 그러나 그들은 공산주의자들처럼 자본을 타파하지는 않았다. 그들은 기존의 국가를 민족의 단위로 축소했고 그렇기에 히틀러는 독일과 오스트리아의 통일을 완강히 주장했다. 이후 독일의 고유 영토임을 주장하며 주데텐란트, 메멜에 이어 그들의 왕국인 레벤스라움을 건설하고자 했다. 이들은 자본가들의 술수와 공산주의자들의 거짓으로부터 민주주의, 자본주의, 공산주의 등을 거부하며 해방을 자처하고 민족의 엄연한 권리를 주장헀으나, 이들 또한 말장난에 불과했다. 대표적으로 그들은 집권 이후 유대인의 자본만을 타도했지 자본주의라는 것은 딱히 타도하지 않았다. 국가조합주의적 혹은 국가자본주의적인 경제적 체제를 채택했지만, 그들은 딱히 그들의 말을 이행하지는 않았다. 오히려 그들은 사회주의(공산주의가 아니다)를 자처하며, 복지와 민족 그리고 생태의 키워드를 내걸고 활동했다.
+그들이 숭배한 민족의 우월성 또한 끝없이 의문이 제기된다. 어떤 기준으로 어떻게 우월한 민족을 골랐는가. 그들은 아리아인을 숭배의 대상으로 삼았고 아리아인의 전통을 계승한 게르만 민족이 이권을 취득하는 것이 마땅하다고 자부했지만, 그렇다면 인류의 시초가 된 흑인은 어떠한가? 위대하지 않은 역사는 없고 위대하지 않은 민족은 없으며 위대한 민족은 없다. 그들은 지도자원리라는 왕의 또 다른 말을 쓴다.
+왕은 때로 대통령이나 민족지도자 혹은 서기장으로 불린다. 우리는 국기와 국장 그리고 정부의 사이에서 우리는 놀아나고 있다. 인형술사의 술수에 걸려든 것이다. 이 판이 짜여져 있다는 것은 분명하다. 모든 국가는 겉으로 전쟁을 규탄하지만 속으로는 이익을 취득하려 한다. 러시아와 우크라이나 전쟁에서 다양한 국가들이 무기 판매와 전시경제로 이득을 취하였고 그 안에서 젊은 사람들은 죽어나갔다. 근대국가 개념은 역사가 진보할수록 더욱 강력해질 것이다. 더더욱 중앙화된 사회에서는 반짝이는 디스토피아가 남아있을 뿐이다.
+
+이 상황에서 우리는 한참 부족하다. 우리의 자아의 만족에서 멀어지고 있다. 우리가 행복하다라 느끼는 상태는 자신의 내면의 자아가 배부른 상태여야만 한다. 우리는 그것을 지속적으로 해결하려하고 세계는 그것을 억압하려 든다. 이 상황에서 우리가 이런 사태에 맞서지 못하는 이유는 이성이 존재하기 때문이다. 이성이란 무엇인가. 우리는 조금 자세히 이성을 탐구할 필요가 있다. 이성적이 되어라 라는 말들을 통해 우리는 어렸을 적부터 이성에 도달하기 위해 교육받고 법과 규칙들은 그것을 향한 길에서 탈선하지 못하도록 만든다. 왜 그들이 굳이 우리를 이성의 선로에 올려놓는가 통제의 강화와 그들 자아의 욕구 충족을 위함이다. 즉 이성이라 함은 우리가 극복해야할 장애물이자 욕구를 방지하기 위한 일련의 주입된 영역일 뿐이다. 우리는 그것을 타계하여야만 한다.
+욕구와 이성의 싸움은 고대부터 지속되어왔다. 그러나 우리는 군주들 현대에서는 정부들은 그것을 억압하고 이성을 주입해 자신에게 이익이 되도록 만들었다  자본주의와 경제순한체계의 최종이익대상은 결국 정부다. 옛날 군주들이 왕관을 두른 것처럼 말이다. 정부의 뒤에는 기업이 존재한다. 대체적으로 국가의 경제는 거대 기업에 의존해있다. 기업들은 수직착취구조로 노동자를 억압하고 쥐어짜내지만 기업이 없다면 경제가 살지 못하고 이는 소비와 내수가 없는 지옥을 의미한다. 기업의 목적은 그것이었고 국가를 그리고 인민을 기업의존증 병자로 만드는 것이 목표였다. 그 배경에는 또다시 정부가 결부되어있다.
+불교에서 말하는 윤회가 이 사회에서도 적용되는 것이다. 우리는 이것을 해결하기 위해 다양한 노력을 해왔다. 수정자본주의, 사회민주주의, 국가자본주의 때로는 공산쥐 혁명과 아나키즘 운동을 그리고 그것들이 성공하거나 이 문제들을 해결했는가? 새로운 군주를 낳았을 뿐이다. 그 군주는 다시 기업과 결탁하거나 혹은 직접 기업이 되어 착취해왔다.
+나는 이렇게 시사한다. 자본주의를 타도하라. 공산주의를 타도하라. 모든 경제에서의 주의를 타도하라.
+
+인간
+인간은 인간이려고 한다. 앞서 언급한 이성은 인간이 아니다. 욕구가 인간이다. 그것이 우리를 이곳까지 이끌었고 모든 산물의 원동력이었다. 그것이 우리를 생명으로 이끈 것이다. 이성이 무너지는 순간들은 국지적으로 다양하게 존재한다. 목적이 존재하는 모든 상황에서는 욕구가 우리의 원동력이 된다. 이성을 뒤로 밀고 욕구를 불러와 행복에 가까워지게 만든다. 그러나 그런 욕구 충족 행위들은 일시적이며 순환을 요구한다. 만족 상태를 도달하기 위해 우리는 끝없이 투쟁한다. 그리고 그 투쟁 과정에서 우리는 욕구를 포함한 자아가 사라지고 있다는 것을 눈치챌 수 있다. 이 과정에 정부와 타인이 포함되었기 때문이다. 간단한 예시다. 밥을 먹음으로써 욕구를 충족하려면 밥을 구매해야만 한다. 밥을 구매하려면 밥을 구매할 재화가 필요하다. 재화를 얻으려면 노동을 제공해 대가를 얻어야만 하는데 이 과정에는 기업이 결부되어있다. 이 과정의 전체에는 정부가 결부되어있다. 그 과정 사이사이에는 나의 욕구를 억압하려 드는 타인이 결부되어있다. 우리의 일생일대, 생애주기에는 앞서 말한 기업, 국가, 타인(삼요소)라는 것이 크게 작용한다. 먹고 자고 입고 의식주와 오락을 위한 모든 것들에 이것이 불가분하게 결여되어있어 우리를 사회 체제라는 것에 평생 묶어두도록 한다. 족쇄를 차게 된 우리는 밥을 사 먹는 과정에서부터 3요소를 맞닥드린다. 밥을 구매하기 위해 재화를 획득하려면 노동을 제공해야 하지만, 노동을 제공하기 위해서는 기업의 거대한 착취의 회유적 정책에서 비롯된 임금 노동을 시행해야만 한다. 우리가 그렇게 노동으로 재화를 벌면 국가는 그것을 여러 명목으로 노략질한다. 이후 우리는 우리의 식탁을 호시탐탐 노리는 타인을 마주한다. 그들은 내가 식사를 하기도 전에 식사의 재료를 먼저 차지하거나 나의 돈벌이를 근본적으로 방해하는 등의 방해공작을 한다. 그들은 이성을 세워 우리를 이 순환에서 벗어나지 못하게 만들고 의미 없는 재화에 가치를 부여해 폭리를 취하려는 그들이 우리를 배회한다.
+
+재화
+우리가 왜 금에 집착하는가? 우리가 왜 돈에 집착하는가? 왜 그것들은 가치가 있고 사람들이 원하는가. 우리는 우리가 당연시 했던 것들에도 의문을 가져야 한다. 재화가 가치 있는 이유는 3요소가 특히 국가와 기업이 허무한 것들에 가짜 가치를 부여하기 때문이다. 그들은 의식주와 오락까지 우리 자아의 욕구를 충족하기 위해 필요한 모든 것들에 가격을 부여하고 순환을 유도한다. 그들의 재화(금, 지폐 등)뿐 아니라 도덕적 규율과 여러 정치 세력에서 주장하는 가치(전통적 가치관, 성소수자 문화 등)는 우리를 억압하고 그들의 이익을 대변하기 위해 만들어진 것들이다. 그리고 기업과 정부가 없으면 그것들의 궤도에서 탈선하지 못하도록 만들어 평생을 그 안에서 살도록 만들었다.
+우리는 항상 부족해 왔다. 영혼은 배고프고 정신은 결핍되었으며 몸은 부족하다.
+
+국가
+국가는 총체적인 노략질의 선두주자이자 기업과 타인을 만들어내고 그들과 결탁한 사회 태초의 존재이다. 고대부터 사회에는 국가밖에 존재하지 않았고 그렇기에 국가가 가져온 권력은 막강했다. 그들의 노략질은 기상천외하다. 국가를 위해 겉으로는 모두에게 그 돈을 돌려주고 부의 재분배와 조국을 위한 산업을 위해 쓰는듯 하지만 그들의 자금이 어디에 어떻게 쓰이는지 알게 된다면 우리는 분노를 감추지 못할 것이다. 그들의 국가적 사업은 제대로 된 것이 없으며, 언제나 자신들의 입맛을 다시기 위함이다. 연금 제도와 여러 복지 정책중 대부분은 성과 없는 도박이고 의회에서 의결하는 여러 법안들, 행정부에서 실행하는 여러 정책들은 실상 효과가 의문스러운 것들로 넘쳐난다.
+국가가 유지되는 방법은 참으로 단순하다. 국가는 혐오와 증오로 작동하는 기상천외한 것들이다. 모든 군주의 이름을 한 것들은 다른 세력을 혐오하거나 혹은 다른 이해관계의 이들, 민족, 종교를 표적으로 삼아 그들에 대한 일방적 공격으로 사람들의 시선을 돌리고 자신이 그 공격의 선두에 서 영웅선전을 하는 것이다. 현대의 전체주의 국가가 아닌 국가들은 제한적인 이념만을 포용해 사람들이 그 두 이념에만 집중하도록 만든다. 거대 여당과 야당의 싸움에 민간인을 끌어들이고 시선이 분화되고 어떤 이념에 몰입해 분노하도록 만드는 것이다. 여기서 두 이념이나 정당의 대립에서 사람들이 분노하고 갈등이 심해지면 국가를 장악하거나 조종하려는 혹은 그러고 있는 이들에게 불리한 것 아닌가 하는 의문이 들수도 있다. 그러나 결국 어느 세력이 총체적으로 이길 수 있는 판은 짜여지지 않는다. 설령 내전이 나더라도 그들의 입장에서는 상대를 완전히 없앨 수 있는 기회를 잡는 셈이 된다. 모든 정당은 적을 창작한다. 종교나 민족의 이익을 대변하는 정당만이 상대를 공격함으로써 이익을 취하는 것이 아니다. 겉으로는 굉장히 민주적이고 원칙적인 정당들조차 극단주의자들을 ‘극단주의적’이어서 적으로 몰아가고 혹은 자신에 대적하는 거대 정당을 비민주적이라는 말로 적으로 만들어 공격한다. 이는 거의 모든 국가에서 나타나는 양상이다. 만약 대한민국의 12.3계엄이나 미국의 셧다운같은 일이 벌어지면 그들은 가면을 벗고 상대에게 공격적인 돌격을 감행한다. 그들이 가면을 벗더라도 그들의 추종자들은 이미 ‘민주주의 수호자’라는 착각과 세뇌를 당해버렸기 때문이다.
+
+기업
+
+타인
+타인은 비록 타인일지라도 우리가 극복해야 하는 요소중에 하나이다. 우리는 태어날 때부터 가족과 이후에는 친구, 동료, 지인들을 만들어가며 타인과 밀접해지고 불가결해지는 느낌을 받는다. 그러나 동료의 관계 뿐만 아니라 우정의 관계에서도 언제나 경계를 늦출 수가 없다. 타인은 항상 자신을 노리며 우리는 그들을 피해 살아남아야 하기 때문이다. 전체적인 경쟁 사회와 문화를 국가가 조성했다면 타인은 그것의 구성 요소이자 주체이다. 자원은 한정되어 있고 우리는 최대한 많은 자원을 확보해 우리의 목숨을 부지해야 한다. 그럴 때면 우리는 가족마저 희생시키는 경우를 수도 없이 봐왔다. 타인과의 관계는(친구, 가족 등) 결국 또 하나의 착취 요소이다. 타인이 서로 타인을 어떻게 구워삶을까 생각하다가 그들은 공격적인 자세를 취하기보다 유화적인 자세를 취하기를 택했다. 그 어떤 부모가 자신의 자식에게 자신의 꿈을 강요하겠는가. 그 어떤 친구가 자신의 친구에게 자신의 이상을 강요하겠는가. 그러나 사전에서 정의한 가족과 친구는 그저 말일 뿐이다. 그들조차 타인이다. 우리는 우리 세계에 혼자이다. 자신 외에는 전부 타인이자 극복해야만 하는 것이다.
+
+종교
+나는 이 세상에 나온 모든 종교의 시초 혹은 그것의 등장 동기가 순전히 이익만이 아니었다는 것을 파악하고 있다. 세계는 너무도 넓고 우리 인간은 그것을 탐구하기 위해 지난 모든 세월을 연구에만 몽땅 쏟아부었다. 그리고 그 연구의 원시적 시도가 바로 종교이다. 세상과 자신의 존재를 뒷받침할 근거. 그것을 찾아 우리는 헤매어왔다. 그러나 그 종교는 짧게 생각해봐도 앞뒤가 맞지 않는 모순적인 것이 되어버렸다. 예수를 믿고 천국을 가느냐 부처의 말씀을 듣고 극락세계에 가느냐! 정말 다양한 세계선이 종교와 사후세계에도 존재한다. 마치 우리의 정신세계처럼. 우리의 정신에서 우러러 나온 것이 종교기 때문에 그렇다. 그 소설같은 성경과 그저 좋은 말씀 있다 정도로 해석 가능한 세계의 경전들이 사람의 사상과 자유와 심지어는 목숨을 좌우한다는 것이 말이나 되나? 과거의 지배자들은 종교가 세계를 뒷바침할 근거라는 주장을 쉽게 관철하지는 못했을 것이다. 그리하여 그들은 사람들 마음을 짓누르기 시작했다. 천국과 지옥 벌울 받을 것이니라. 모든 사람들이 그 말로 인해 마음 한구석에 불안을 품고 그것이 싹트며 우리는 비로소 종교와 그것을 이용하는 이들의 노예가 되어버렸다. 단 한명의 믿음과 플라시보 효과로 대대손손 그 거짓이 진실처럼 이어져 내린것이다. 각각의 신앙과 신이 대립하고 그랬다면 이미 신들의 전쟁이 났을 터. 우리는 왜 믿는 것만을 믿는가. 어디 사후세계가 있고 어디 진짜 신이 있으며 예수는 무엇이고 부처는 무엇이고 토속 신들은 무엇인가.
+장사치와 믿음의 불안이 우리를 수 세기 과학 발전의 저해로 몰아넣었고 모든 전쟁과 갈등으로 몰아넣었다. 그것의 동기와 수주인은 바로 타인. 혁파해야만 할 것이다.
+
+도덕과 이상 그리고 극복
+우리의 이성은 그들의 우리에서 심어진 것이고 우리는 따라서 타인 정부 기업을 극복하여야만 한다. 그리고 그 이성의 산물이자 착취자의 잔재인 도덕이 남아버렸다. 도덕과 윤리관은 무엇인가. 사람을 죽이지 말고 부모를 사랑하며 애국하고 타인에게 친절하고 벚보다 못한 것들이 법보다 강력한 힘을 행사하고 있다. 그러나 우리가 알아야 하는 것은 여기에는 절대적인 기준이 없다는 것이다. 살인이 마냥 부적절한가? 만약 한 공간에 너무 많은 사람이 있어서 사람 수를 줄여야 하는데 그 중에 병든 자 혹은 쇠약한 노인이 있다고 해보자 그럼면 수를 줄이기 위한 첫 대상으로 누구를 고르겠는가. 바로 그 약한 이들일 것이다. 효도와 친절 또한 절대적인 기준이 있는가. 애초에 왜 그것들을 우리는 좋다고 받아들이는가 효도가 좋다 친절이 좋다 받아들이는 것 또한 우리 이성실현거ㅏ 도덕성에소 나온 거짓된 허황. 타인은 그것드을 강요했고 우리들은 그렇게 느끼도록 타인에게 상호적으로 길러져 진화된 것이다. 우리는 우리가 느끼는 감정의 근본마저 새로운 경지로 탈바꿈해야한다. 원래 존재했던 행위의 가치룰 믿지 말아라. 동물은 죽이고 사람은 죽이지 않는 것인가. 인간에게만 친절을 배푸고 그렇지 않은 것에는 어째서 그러지 않는가 자신의 부모에게만 효도를 올리고 타인의 부모에게는 효도를 올리지 않는가. 타인은 친절을 그리고 부모는 효도를 강요했고 우리는 그렇게 길러져 떠 다른 이를 기르게 되는 것이다.
         </div>
     </body>
 </html>
